@@ -60,8 +60,8 @@ import static net.minecraftforge.fml.common.Mod.EventBusSubscriber;
 public class MMORPG {
 
     // DISABLE WHEN PUBLIC BUILD
-    public static boolean RUN_DEV_TOOLS = true;
-
+    public static boolean RUN_DEV_TOOLS = false;
+    
     public static void devToolsLog(String string) {
         if (RUN_DEV_TOOLS) {
             System.out.println(string);
